fix(videodetail): page behind player too wide

--- a/packages/ui-react/src/components/VideoDetails/VideoDetails.module.scss
+++ b/packages/ui-react/src/components/VideoDetails/VideoDetails.module.scss
@@ -141,7 +141,7 @@
 .poster {
   position: absolute;
   top: 0;
-  right: -15px;
+  right: 0;
 
   z-index: -1;
 
@@ -172,7 +172,7 @@
 .posterFade {
   position: absolute;
   top: 0;
-  right: -15px;
+  right: 0;
   left: 0;
   z-index: -1;
   height: 120px;
